--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,20 +20,12 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
 .header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
 }
 
 .header div ul li {
@@ -43,14 +35,13 @@ body {
 
 a {
     color: #ffffff;
-    text-decoration: none;
 }
 
 p {
     font-size: 16px;
 }
 
-.hero {
+.Background-Image {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -118,19 +109,19 @@ p {
 
 .benefit-lead img {
     display: block;
-    margin: 10px auto;
+    margin: auto;
     max-width: 150px;
 }
 
 .benefit-brand img {
     display: block;
-    margin: 10px auto;
+    margin: auto;
     max-width: 150px;
 }
 
 .benefit-cost img {
     display: block;
-    margin: 10px auto;
+    margin: auto;
     max-width: 150px;
 }
 
